Build project card

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -150,11 +150,47 @@
                 <a href="#!" class="panel__download"><i class="material-icons">import_export</i></a>
                 <a href="#!" class="panel__view"><i class="material-icons">list</i></a>
             </div>
+            <div class="responsive-container">
+                <div class="grid-body">
+                    <div class="folder-card">
+                        <div class="folder-card__gallery">
+                            <!--    Photo grid  -->
+                            <div class="row">
+                                <div class="column1">
+                                    <img src="../assets/fine.jpg" alt="thumbnail" draggable="false">
+                                </div>
 
-            <div class="body">
-                <!-- <div class="folder-card">
-                    
-                </div> -->
+                                <div class="column2">
+                                    <img src="../assets/fashion.jpg" alt="thumbnail" draggable="false">
+                                    <img src="../assets/fashion.jpg" alt="thumbnail" draggable="false">
+                                   
+                                    <!-- <div class="overlay">+4</div> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="folder-card__desc">
+                            <div class="info">
+                                <p class="info__name">Tech crunch</p>
+                                <p class="info__activity">John snow 2 weeks ago</p>
+                            </div>
+                            <div class="action">
+                                <button class="action__btn">
+                                    <i class="material-icons">more_vert</i>
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="folder-card__actions">
+                            <div class="media">
+                                <button class="media-actions"><i class="far fa-image fa-lg"></i></button>
+                                <button class="media-actions"><i class="fas fa-film fa-lg"></i></button>
+                            </div>
+                            <div class="others">
+                                <button class="others-btn"><i class="fas fa-sort-alpha-up fa-lg"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
